﻿-- 0.guess.what --
* Fixed XML file list generation for invalid filenames from other os's
* Fixed a rare refresh crash


-- 0.686 2006-02-13 --
* Fixed active search (oops)
* Fixed a crash when clicking on dchub links

-- 0.685 2006-02-12 --
* Fixed "browse list" being available for NMDC users
* [ADC] Removed obsolete CI field
* Fixed missing upload progress
* [bug 89] Readded dynamic compression disabling
* Added filelist download speed to filelist browser status bar
* Added advanced hublist filter (thanks trem)
* [bug 579] Fixed 0-byte files not being created if directory doesn't exist
* [bug 804] Cleaned up project files (thanks pothead)
* Socket buffer size = 0 now means use system default
* [bug 789] Fixed wrong nick being copied (thanks ullner)
* [bug 794] [ADC] Fixed automatic reconnect (thanks ullner)
* [bug 806] Fixed description for favorite hubs (thanks ullner)
* Updated to latest ADC specs, this will break 0.68/0.681/0.6811 queue sources and fav users (for NMDC as well)
* Fixed a bufferedsocket crash
* [ADC] Fixed quitting user processing (thanks ullner)
* Clarified upload speed setting (thanks pothead)
* Manual away setting no longer cleared when un-minimizing (thanks pothead)
* Search result automatching waits with match until file list is downloaded if auto-matching enabled
* Slight performance improvement when sending files
* Fixed an issue with nick names disappearing from hub
* Added customizable maximum user count when autosearching
* Changed to open source version unicows for win9x users, perhaps this one will work better for you (see it as a
  last attempt; if it doesn't work, w9x support will be phased out completely unless someone else solves the win9x
  issues)
* [bug 774] Fixed invalid description being sent if hub modifies it
* [bug 818] Fixed default exit mnemonic
* Fixed some more crashes (thanks bigmuscle)
* Fixed some shutdown issues
* Updated country database

-- 0.6811 2006-01-21 --