@@ -1,6 +1,10 @@
 ﻿-- 0.guess.what --
 * Fixed XML file list generation for invalid filenames from other os's
 * Fixed a rare refresh crash
+* CID is now shown if no nick name is currently available for a user
+* Fixed another crash when loading file lists
+* Played some more with bufferedsocket performance
+* Fixed some VS 2005 issues (thanks trem)
 
 
 -- 0.686 2006-02-13 --
